# ProjectManagementTool

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/: README.md
docs/design/: 13_Phase0_完了_Phase1_引き継ぎ事項.md  3_プロジェクト管理ツール_実装方針確定メモ.md  8_DB設計書_v2.1_最終版.md  Phase2_CLI設計書.md  Phase3_拡張機能実装_設計書.md  Phase4_品質安定性向上_設計書.md  Phase5_Textual_UI基本構造設計書.md  Phase5_テンプレート機能_BL設計書.md  Phase5_詳細実装計画書.md
docs/discussions/: 01_DB設計書_初期版.md  10_Phase0_レビュー対応完了レポート.md  11_Phase0_レポート最終確認事項.md  12_Phase0_pyproject_requirements_確認用.md  2_ClaudeCodeからの確認事項.md  5_DB設計書_Review_by_ChatGPT.md  6_DB設計書_v2_修正版.md  7_DB設計書_v2_修正版_Review_by_ChatGPT.md  9_Phase0_実装完了レポート.md  P2-6_Phase 2（TUI実装）実装完了レビュー結果_by_ChatGPT.md  Phase1_フィードバック対応完了レポート.md  Phase2_完了レポート.md  Phase3_P0-08_Review-1_by_ChatGPT.md  Phase3_P0-08_Review-2_by_ChatGPT.md  Phase4_完了レポート.md  Phase5_P5-12_UI設計書レビュー結果1.md  Phase5_P5-12_UI設計書レビュー結果2.md  Phase5_P5-17_実装計画書レビュー結果1.md  Phase5_P5-1_搭載機能洗い出し_議論スレッド.md  Phase5_P5-3_搭載機能洗い出し結果.md  Phase5_P5-4-1_フェーズ分解結果.md  Phase5_P5-4-2_フェーズ分解結果_ChatGPT用.md  Phase5_P5-5_設計整理スレッド初投稿文.md  Phase5_P5-6_設計整理結果.md  Phase5_P5-7_論点隔離スレッド初投稿文.md  Phase5_P5-8_設計中論点_ClaudeCode検出分.md  Phase5_P5-9_BL設計書レビュー結果1.md  Phase5_P5-9_BL設計書レビュー結果2.md  Phase5_完了レポート.md
docs/specifications/: 1_プロジェクト管理ツール_ClaudeCode仕様書.md  pmtool_統合仕様書_Phase4完了版.md  テンプレート機能_仕様書.md
docs/user/: FAQ.md  TUTORIAL.md  USER_GUIDE.md
scripts/: init_db.sql  verify_init.py  verify_phase1.py  verify_phase2.py
src/pmtool/: __init__.py  database.py  dependencies.py  doctor.py  exceptions.py  models.py  repository.py  repository_template.py  status.py  template.py  validators.py
src/pmtool/tui/: __init__.py  cli.py  commands.py  display.py  formatters.py  input.py
src/pmtool_textual/: __init__.py  app.py
src/pmtool_textual/screens/: __init__.py  base.py  home.py  project_detail.py  settings.py  setup.py  subproject_detail.py  template_apply_wizard.py  template_hub.py  template_save_wizard.py
tests/: __init__.py  conftest.py  test_cascade_delete.py  test_cli_coverage.py  test_commands_simple.py  test_commands_smoke.py  test_coverage_boost.py  test_coverage_boost3.py  test_coverage_boost4.py  test_database_coverage.py  test_dependencies.py  test_dependencies_edgecases.py  test_display_coverage.py  test_doctor.py  test_dry_run.py  test_input_coverage.py  test_no_emoji.py  test_reason_code.py  test_repository.py  test_repository_edgecases.py  test_smoke.py  test_status.py  test_template.py  test_template_integration.py  test_template_repository.py  test_tui_integration.py  test_update.py  test_validators.py
(+3 files in other folders)
